Fixed spacing issues

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -58,10 +58,12 @@ body {
 }
 
 #editLabel {
+    padding-left: 5px;
     background-color: #65CB86;
 }
 
 #edit {
+    padding-left: 5px;
     background-color: #B3FFCC;
 }
 
